welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: ';' expected but integer literal found.
  else {setPos(getX()+1,getY()-1)} 1
                                   ^Diagonal:24: error: ';' expected but integer literal found.
  else {setPos(getX()+1,getY()-1)}1
                                  ^